# local-modern-data-stack

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  dbt_project.yml  package-lock.yml  profiles.yml  pyproject.toml
dagster_home/: pyproject.toml  setup.py
dagster_home/duckdb/: assets.py  definitions.py  project.py  schedules.py
dagster_home/local_dagster/: assets.py  definitions.py  project.py  schedules.py
dagster_home/local_dagster/assets/: bronze.py  dbt.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/01_bronze/covid/: sources.yml
dbt/models/01_bronze/xetra/: sources.yml
dbt/models/02_silver/covid/: schema.yaml  silver_covid.sql
dbt/models/02_silver/xetra/: schema.yaml  silver_xetra.sql
dbt/models/03_gold/covid/: gold_covid.sql  schema.yaml
dbt/models/03_gold/xetra/: gold_xetra.sql  schema.yaml
models/01_bronze/covid/: sources.yml
models/02_silver/covid/: schema.yaml  silver_covid.sql
models/03_gold/covid/: schema.yaml
models/read/: read.sql  src.yml
src/local_modern_data_stack/: definitions.py  schedules.py
src/local_modern_data_stack/defs/: jobs.py  project.py  resources.py
src/local_modern_data_stack/defs/assets/: __init__.py  bronze.py  dbt.py  partitions.py  presentation.py
