[project]
name = "local-modern-data-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster~=1.10.12",
    "dagster-dbt~=0.26.12",
    "dagster-duckdb~=0.26.19",
    "dbt-core~=1.9.4",
    "dbt-duckdb~=1.9.3",
    "deltalake~=1.1.4",
    "duckdb~=1.2.2",
    "plotly[express]~=6.1.2",
    "polars[pyarrow]~=1.30.0",
    "requests~=2.32.3",
    "dagster-dg-cli>=1.10.21",
    "dagster-webserver>=1.10.21",
]

[dependency-groups]
dev = ["dagster-webserver~=1.10.19", "dagster-dg-cli~=1.10.21"]


[tool.ruff]
fix = true
show-fixes = true
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "W",   # pycodestyle
    "I",   # isort
    "N",   # pep8-naming
    "ANN", # function annotations
    "B",   # bugbear
    "A",   # built-ins
]

ignore = ["E501", "B905"]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "local_modern_data_stack"
registry_modules = ["local_modern_data_stack.components.*"]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/__pycache__", "**/*venv/**/*"]
