[project]
name = "local-modern-data-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster~=1.10.12",
    "dagster-dbt~=0.26.12",
    "dagster-duckdb~=0.26.19",
    "dbt-core~=1.9.4",
    "dbt-duckdb~=1.9.3",
    "deltalake~=1.1.4",
    "duckdb~=1.2.2",
    "plotly[express]~=6.1.2",
    "polars[pyarrow]~=1.30.0",
    "requests~=2.32.3",
]

[dependency-groups]
dev = [
    "dagster-webserver~=1.10.19",
    "dagster-dg-cli~=1.10.21",
    "prek~=0.2.1",
    "sqlfluff-templater-dbt~=3.4.2",
    "pyrefly~=0.37.0",
    "sqlfluff~=3.4.2",
]

[tool.ruff]
fix = true
show-fixes = true
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "W",   # pycodestyle
    "I",   # isort
    "N",   # pep8-naming
    "ANN", # function annotations
    "B",   # bugbear
    "A",   # built-ins
]

ignore = ["E501", "B905"]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "local_modern_data_stack"
registry_modules = ["local_modern_data_stack.components.*"]

[tool.sqlfluff.core]
dialect = "duckdb"
templater = "dbt"
exclude_rules = ["L031", "L034"]

[tool.sqlfluff.templater.dbt]
project_dir = "dbt"
profiles_dir = "dbt"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.identifiers]
capitalisation_policy = "lower"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/__pycache__", "**/*venv/**/*"]
