[project]
name = "local-modern-data-stack"
version = "0.1.0"
authors = [{ name = "Moritz Körber" }]
description = "A simple project that demos duckdb and delta lake leveraged by dbt and orchestrated by Dagster."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster~=1.10",
    "dagster-dbt~=0.26",
    "dagster-duckdb~=0.26",
    "dbt-core~=1.9",
    "dbt-duckdb~=1.9",
    "deltalake==1.2",
    "duckdb~=1.2",
    "plotly[express]~=6.1",
    "polars[pyarrow]~=1.30",
    "requests~=2.32",
]

[dependency-groups]
dev = [
    "dagster-webserver~=1.10",
    "dagster-dg-cli~=1.10",
    "prek~=0.2",
    "sqlfluff-templater-dbt~=3.4",
    "pyrefly~=0.37",
    "sqlfluff~=3.4",
]

[tool.ruff]
fix = true
show-fixes = true
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "W",   # pycodestyle
    "I",   # isort
    "N",   # pep8-naming
    "ANN", # function annotations
    "B",   # bugbear
    "A",   # built-ins
]

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "local_modern_data_stack"
registry_modules = ["local_modern_data_stack.components.*"]

[tool.sqlfluff.core]
dialect = "duckdb"
templater = "dbt"

[tool.sqlfluff.templater.dbt]
project_dir = "dbt"
profiles_dir = "dbt"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.identifiers]
capitalisation_policy = "lower"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/__pycache__", "**/*venv/**/*"]
